<resources>
    <string name="app_name">MyStory</string>
    <string name="text_submit">Submit</string>
    <string name="text_input_first">Please Input First</string>
    <string name="text_hint_name">Enter Your Name</string>
    <string name="text_hint_email">Enter your email</string>
    <string name="valid_email_id">Email must valid</string>
    <string name="valid_password">password minimum 6 characters</string>
    <string name="text_hint_password">password minimum 6 characters</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_question">Or Sign Up Using</string>
    <string name="title_login_page">Ready to share your stories today ?</string>
    <string name="title_login_input">Input Your data First !</string>
    <string name="title_register_page">Fill your detail below</string>
    <string name="text_name">Name</string>
    <string name="text_email">Email</string>
    <string name="text_password">Password</string>
    <string name="menu_logout_en">Logout</string>
    <string name="fab_add_story">Add Story</string>
    <string name="username">Username</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="text_description">Description</string>
    <string name="Text_upload">Upload</string>
    <string name="loading">Loading...</string>
    <string name="appwidget_text">Story Widget</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="empty_text">No Data</string>
    <string name="menu_setting">Language Setting</string>
    <string name="cd_image_preview">Image Preview</string>
    <string name="cd_image_capture">Image Capture</string>
    <string name="cd_image_switch_camera">image switch camera</string>
    <string name="cd_image_story_login">image story login</string>
    <string name="cd_image_story_register">image story register</string>
    <string name="cd_image_story_detail">image story detail</string>
    <string name="cd_image_list_stories">image list stories</string>
    <string name="cd_image_widget">image widget</string>
    <string name="toast_fail_show_camera">Failed to show Camera</string>
    <string name="toast_not_get_permission">Not Get Permission.</string>
    <string name="title_choose_picture">Choose a Picture</string>
    <string name="toast_success_take_picture">Success to take picture.</string>
    <string name="toast_fail_take_picture">Failed to take a picture.</string>
    <string name="toast_logout_success">Logout Success</string>
    <string name="capture_by">Capture by %s</string>
    <string name="menu_map">Menu Map</string>
    <string name="title_activity_maps">MapActivity</string>
    <string name="normal_type">Normal</string>
    <string name="satellite_type">Satellite</string>
    <string name="terrain_type">Terrain</string>
    <string name="hybrid_type">Hybrid</string>
    <string name="text_parsing_failed">Style parsing failed.</string>
    <string name="text_error_cant_find_style">\"Can\'t find style. Error: \"</string>
    <string name="text_no_location">No Location</string>
    <string name="retry">Retry</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
</resources>